--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,24 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: DDH's Land
 
 # Short description of your site
 description: A virtual proof that I'm awesome
 
 # Your name to show in the footer
-author: Some Person
+author: ddhaha
 
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  HOME: "home"
+  RESEARCH:
+    - Area1: "https://beautifuljekyll.com"
+    - Area2: "https://www.markdowntutorial.com/"
+    - Area3: 
+  CONTACT: "https://deanattali.com"
+  
 
 # --- Logo --- #
 
